fix reviews grid, adjust gap on profile

--- a/Szalloda/public/css/ertekelesek.css
+++ b/Szalloda/public/css/ertekelesek.css
@@ -10,7 +10,7 @@
     gap: 10px
 }
 
-.ratingSection:nth-last-child(1) {
+.ratingSection:has(> :last-child:nth-child(1)) {
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
