--- a/Szalloda/public/css/profil.css
+++ b/Szalloda/public/css/profil.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     height: 120px;
-    margin-bottom: 2%;
+    margin-bottom: 0.5%;
     background-color: var(--colour_sidebar);
 }
 
